# Tab-Recorder

./: .gitignore  PRIVACY.md  README.md  TEST_PLAN.md  eslint.config.js  manifest.json  package-lock.json  package.json  vitest.config.js
.github/: dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  release.yml
.opencode/commands/: handoff.md
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/src/: lib.rs  main.rs
apps/desktop/src/audio/: mod.rs
e2e/: audio_source.html  extension-load.spec.mjs  extension.fixture.mjs  record-audio.spec.mjs  server.mjs
extension/: manifest.json  panel-preview.js  panel.css  panel.html  panel.js  service_worker.js  settings.css  settings.html  settings.js  support.css  support.html  support.js  tl-visuals.js
extension/lib/: audioFs.js  browserAi.js  diarizationWorker.js  diarizationWorkerClient.js  diarize.js  diarizedTranscript.js  embeddingCluster.js  mp3Encoding.js  utils.js  (+9 more)
scripts/: build-extension.sh  vendor-transformers.sh
store-assets/: README.md
tests/: audio-fs.test.js  browser-ai.test.js  diarize.test.js  diarized-transcript.test.js  embedding-cluster.test.js  file-storage.test.js  mp3-encoding.test.js  mp3.test.js  panel-helpers.test.js  service-worker.test.js  session-merge.test.js  speaker-embed-model.test.js  speaker-embed-storage.test.js  summary-file.test.js  transcript-parser.test.js  transcription-chunks.test.js  utils.test.js  utterance-segmenter.test.js  webm-opus-decoder.test.js  whisper-model-storage.test.js  whisper-model.test.js
tools/: export_tab_recorder_repo.sh  transcribe.sh
(+34 files in other folders)
